--- a/public/assets/css/namari-color.css
+++ b/public/assets/css/namari-color.css
@@ -129,6 +129,7 @@ a:hover, #header.nav-solid nav a:hover {
 #banner {
     background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
     background-size:cover;
+    height: 650px;
 }
 
 
