--- a/public/assets/css/namari-color.css
+++ b/public/assets/css/namari-color.css
@@ -115,7 +115,8 @@ a:hover, #header.nav-solid nav a:hover {
 
 .secondary-color {
     /* background-color:#f5f5f5; */
-    background: url("../images/banner-images/banner-image-2.jpg") no-repeat top;
+    background: url("../images/banner-images/banner-image-2.jpg") no-repeat center top fixed;
+    background-size: cover;
 }
 
 
@@ -185,17 +186,17 @@ body {
 /* Section Title and Subtitle */
 
 .section-title {
-    font-family: 'Open Sans', sans-serif, Arial, Helvetica;
+    font-family: 'MAIAN';
     font-size: 34px; 
     font-weight:700;
     color:#111;
 }
 
 .section-subtitle {
-    font-family: 'Open Sans', sans-serif, Arial, Helvetica;
+    font-family: 'MAIAN';
     font-size: 16px;
     font-weight:300;
-    color:#9c9c9c;
+    color:#111;
 }
 
 /* Testimonial */
@@ -321,9 +322,9 @@ h6 {
 
 #landing-footer, #landing-footer p, #landing-footer a {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-    font-size:12px;
+    font-size:14px;
     font-weight:normal;
-    color:#999;
+    color:#111;
 }
 
 /* Footer Icon Color */
