--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2261,11 +2261,12 @@ blockquote {
 
 #nav-main ul li a {
     display: block;
-    padding: 10px 20px;
+    padding: 5px 10px;
     text-decoration: none;
     /* color: #333; */
     transition: background-color 0.3s, color 0.3s;
 }
+
 
 /* Hover effect for main menu items */
 #nav-main ul li a:hover {
@@ -2282,22 +2283,23 @@ blockquote {
     left: 0;
     background-color:#0b82cc;
     /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
-    /* z-index: 1; */
-    
+    /* z-index: 1; */    
     
 }
 
+
 #nav-main ul li ul li {
     display: block;
-    width: 250px;
+    width: 270px;
 }
 
 #nav-main ul li ul li a {
     text-align: left;
     border: 1px solid #f0f0f0;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     /* color: #333; */
     transition: background-color 0.3s, color 0.3s;
+    font-size: 12px;
 }
 
 /* Hover effect for sub-menu items */
