--- a/public/assets/css/namari-color.css
+++ b/public/assets/css/namari-color.css
@@ -142,7 +142,7 @@ a:hover, #header.nav-solid nav a:hover {
 
 body {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-    font-size:15px;
+    font-size:16px;
     font-weight:normal;
     color:#111;
 }
@@ -223,15 +223,15 @@ h1 {
 }
 
 h2 {
-    font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-    font-size: 34px; 
+    /* font-family: 'Open Sans', sans-serif, Arial, Helvetica; */
+    font-size: 24px; 
     font-weight:300;
     color:#111;
 }
 
 h3 {
-    font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-    font-size: 30px; 
+    /* font-family: 'Open Sans', sans-serif, Arial, Helvetica; */
+    font-size: 16px; 
     font-weight:700;
     color:#111;
 }
