--- a/public/assets/css/namari-color.css
+++ b/public/assets/css/namari-color.css
@@ -129,12 +129,12 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
+    /* background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top; */
     background-size:cover;
     height: 650px;
 }
 #banner-wd {
-    background: url("../images/banner-images/banner-wd-1x.jpg") no-repeat center top;
+    /* background: url("../images/banner-images/banner-wd-1x.jpg") no-repeat center top; */
     background-size:cover;
     height: 450px;
 }
