--- a/public/assets/css/namari-color.css
+++ b/public/assets/css/namari-color.css
@@ -133,6 +133,11 @@ a:hover, #header.nav-solid nav a:hover {
     background-size:cover;
     height: 650px;
 }
+#banner-other {
+    background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
+    background-size:cover;
+    height: 250px;
+}
 #banner-wd {
     /* background: url("../images/banner-images/banner-wd-1x.jpg") no-repeat center top; */
     background-size:cover;
