--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1504,6 +1504,15 @@ blockquote {
     border-radius: 5px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.07);
 }
+.box-other {
+    display: inline-block;
+    padding: 15px 25px;
+    margin: 10px;
+    background-color:#fff;
+    /* border: 1px solid #f0f0f0; */
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgba(40, 49, 176, 0.98);
+}
 #villas img {
     display: inline-block;
     /* padding: 15px 25px; */
